--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,49 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".AppointmentActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".ScheduleActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".PaymentActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".PaymentCompleteActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity android:name=".HomeDescriptionActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity android:name=".HomeInfoActivity"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
